// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-t8lkk2-0 gygqvQ"
  data-testid="header-bg"
>
  <div
    class="header__Container-t8lkk2-1 jWVmSJ"
  >
    <p
      class="header__Link-t8lkk2-2 kduJId"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-t8lkk2-1 jWVmSJ"
>
  <p
    class="header__Link-t8lkk2-2 JDVtZ"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-t8lkk2-0 eNGEnG"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-t8lkk2-1 jWVmSJ"
  >
    <div
      class="header__Group-t8lkk2-3 htcHdw"
    >
      <p
        class="header__Link-t8lkk2-2 JDVtZ"
      >
        Series
      </p>
      <p
        class="header__Link-t8lkk2-2 JDVtZ"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-t8lkk2-3 htcHdw"
    >
      <div
        class="header__Search-t8lkk2-5 bcssWY"
      >
        <button
          class="header__SearchIcon-t8lkk2-6 WpLKx"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-t8lkk2-4 hfQZH"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-t8lkk2-10 ftXelZ"
      >
        <button
          class="header__Picture-t8lkk2-8 eFPniw"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-t8lkk2-9 dVEVde"
        >
          <div
            class="header__Group-t8lkk2-3 htcHdw"
          >
            <button
              class="header__Picture-t8lkk2-8 eFPniw"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-t8lkk2-2 JDVtZ"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-t8lkk2-3 htcHdw"
          >
            <p
              class="header__Link-t8lkk2-2 JDVtZ"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-t8lkk2-1 header__Feature-t8lkk2-11 jWVmSJ dKdsXB"
  >
    <h2
      class="header__FeatureCallOut-t8lkk2-12 kIyrZX"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-t8lkk2-13 heJWRn"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-t8lkk2-15 joWpOK"
    >
      Play
    </button>
  </div>
</div>
`;
